--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Ignore big data file
-./data/SIMILARITY10_ln11
+./data/SIMILARITY10_ln11/*
 ./data/full_mask_final_segmentation_hwatershed_bg500_90%.tif
 
 # Ignore archive files
-./archive/
+./archive/*
 
 # Ignore all images in tiff
 *.tiff
