add cluster.py file

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 ./data/full_mask_final_segmentation_hwatershed_bg500_90%.tif
 
 # Ignore archive files
-./archive/*
+archive/*
 
 # Ignore all images in tiff
 *.tiff
 *.tif
+
+
